syntax = "proto3";

package users;

// The Users service definition.
service Users {
  rpc GetUserAvatar (UserRequest) returns (Avatar);
  rpc GetUserName (UserRequest) returns (Name);
}

message Avatar {
    string avatarURL = 1;
}

message Name {
    string name = 1;
}

message UserRequest {
    string uid = 1;
}